--- a/16-ADAM-Uncertainty.Rmd
+++ b/16-ADAM-Uncertainty.Rmd
@@ -104,7 +104,7 @@ As it is well known in statistics [e.g. see Section 6.4 of @SvetunkovSBA], if se
 3. The model is correctly specified;
 4. Moments of the distribution of error term are finite.
 
-In case of ETS and ARIMA, some of parameters are bounded (e.g. to satisfy stability condition from Section \@ref(stabilityConditionAdditiveError)), and the estimates might lie near the bounds. This means that the distribution of estimates of parameters might not be Normal. However, given that the bounds of the parameters are typically fixed, and all estimates that exceed them are set to the boundary values in the optimisation routine, the estimates of parameters will follow Rectified Normal distribution [@Socci1997]. This is important because knowing the distribution, we can derive the confidence intervals for the parameters. However, given that we estimate the standard errors of parameters in sample, we need to use t-statistics to correctly capture the uncertainty. The confidence intervals will be constructed in a conventional way in this case, using the formula [see Section 6.4 of @SvetunkovSBA]:
+In case of ETS and ARIMA, some of parameters are bounded (e.g. to satisfy stability condition from Section \@ref(stabilityConditionAdditiveError)), and the estimates might lie near the bounds. This means that the distribution of estimates of parameters might not be Normal. However, given that the bounds of the parameters are typically fixed, and all estimates that exceed them are set to the boundary values in the optimisation routine, the estimates of parameters will follow Rectified Normal distribution [@Socci1997]. This is important because knowing the distribution, we can derive the confidence intervals for the parameters. However, given that we estimate the standard errors of parameters in-sample, we need to use t-statistics to correctly capture the uncertainty. The confidence intervals will be constructed in a conventional way in this case, using the formula [see Section 6.4 of @SvetunkovSBA]:
 \begin{equation}
     \theta_j \in (\hat{\theta_j} + t_{\alpha/2}(df) s_{\theta_j}, \hat{\theta_j} + t_{1-\alpha/2}(df) s_{\theta_j}), 
     (\#eq:confidenceInterval)
