--- a/11-ADAM-Estimation.Rmd
+++ b/11-ADAM-Estimation.Rmd
@@ -18,7 +18,7 @@ implying that the initial values of components and the smoothing parameters of t
   \end{aligned},
   (\#eq:ETSADAMAAAEstimated)
 \end{equation}
-where the initial values $\hat{l}_0, \hat{b}_0$ and $\hat{s}_{-m+2}, ... \hat{s}_0$ are estimated and then influence all the future values of components via the recursion \@ref(eq:ETSADAMAAAEstimated) and $e_t = y_t -\hat{y}_t$ is the one step ahead in sample forecast error, also known in statistics as the residual of the model. The set of equations \@ref(eq:ETSADAMAAAEstimated) allows constructing the model by applying equations one by one (you can even do that in MS Excel y creating five columns for the respective five equations).
+where the initial values $\hat{l}_0, \hat{b}_0$ and $\hat{s}_{-m+2}, ... \hat{s}_0$ are estimated and then influence all the future values of components via the recursion \@ref(eq:ETSADAMAAAEstimated) and $e_t = y_t -\hat{y}_t$ is the one step ahead in-sample forecast error, also known in statistics as the residual of the model. The set of equations \@ref(eq:ETSADAMAAAEstimated) allows constructing the model by applying equations one by one (you can even do that in MS Excel y creating five columns for the respective five equations).
 
 The estimation itself does not happen on its own, a complicated process of minimisation/maximisation of the pre-selected loss function by changing the values of parameters is involved. Typically, there is no analytical solution for estimates of ADAM parameters because of the model's recursive nature. As a result, numerical optimisation is used to obtain the estimates of parameters. The results of the estimation will differ depending on:
 
@@ -428,7 +428,7 @@ where $\eta_{t+h|t} \sim N(0, \sigma_h^2)$ is the $h$ steps ahead forecast error
 	\hat{\sigma}_h^2 = \frac{1}{T-h} \sum_{t=1}^{T-h} e_{t+h|t}^2 ,
   (\#eq:hstepsSigma)
 \end{equation}
-where $e_{t+h|t}$ is the in sample estimate of the $\eta_{t+h}$. The formula \@ref(eq:LikelihoodMSEh) can be used for the calculation of information criteria and in turn for the model selection in cases, when MSE$_h$ is used for the model estimation.
+where $e_{t+h|t}$ is the in-sample estimate of the $\eta_{t+h}$. The formula \@ref(eq:LikelihoodMSEh) can be used for the calculation of information criteria and in turn for the model selection in cases, when MSE$_h$ is used for the model estimation.
 
 @Svetunkov2020Multistep demonstrate that \@ref(eq:hstepsMSE) is more efficient than the conventional MSE$_1$ when the true smoothing parameters are close to zero and is less efficient otherwise. On smaller samples, MSE$_h$ produces biased estimates of parameters due to shrinkage. This can still be considered an advantage if you are interested in forecasting and do not want the smoothing parameters to vary substantially from one sample to another.
 
