--- a/websites.bib
+++ b/websites.bib
@@ -1,5 +1,5 @@
 @MISC{SvetunkovAccuracy2019,
-    title = {{Are You Sure You’re Precise? Measuring Accuracy of Point Forecasts}},
+    title = {{Are You Sure You're Precise? Measuring Accuracy of Point Forecasts}},
     author = {Ivan Svetunkov},
     howpublished = {Open Forecasting},
     note = {(version: 2019-08-25)},
@@ -26,7 +26,7 @@
 }
 
 @MISC{KourentzesWeb2012,
-    title = {{Statistical Significance of Forecasting Methods – an Empirical Evaluation of the Robustness and Interpretability of the MCB, ANOM and Friedman-Nemenyi Test}},
+    title = {{Statistical Significance of Forecasting Methods -- an Empirical Evaluation of the Robustness and Interpretability of the MCB, ANOM and Friedman-Nemenyi Test}},
     author = {Nikolaos Kourentzes},
     howpublished = {Website},
     note = {(version: 2021-08-12)},
