Making apacite more flexible

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -88,5 +88,7 @@
 \newtheorem*{adamCitation}{Citation}
 
 \usepackage[natbibapa]{apacite}
+\renewcommand{\doiprefix}{}
+\newcommand{\doi}[1]{\url{https://doi.org/#1}}
 
 \frontmatter
