--- a/websites.bib
+++ b/websites.bib
@@ -2,7 +2,7 @@
     title = {{Are You Sure You're Precise? Measuring Accuracy of Point Forecasts}},
     author = {Ivan Svetunkov},
     howpublished = {Open Forecasting},
-    note = {(version: 2019-08-25)},
+    note = {version: 2019-08-25},
     url = {https://forecasting.svetunkov.ru/en/2019/08/25/are-you-sure-youre-precise-measuring-accuracy-of-point-forecasts/},
     year = {2019}
 }
@@ -11,7 +11,7 @@
     title = {{Naughty APEs and the Quest for the Holy Grail}},
     author = {Ivan Svetunkov},
     howpublished = {Open Forecasting},
-    note = {(version: 2017-07-29)},
+    note = {version: 2017-07-29},
     url = {https://forecasting.svetunkov.ru/en/2017/07/29/naughty-apes-and-the-quest-for-the-holy-grail/},
     year = {2017}
 }
@@ -20,7 +20,7 @@
     title = {{Introduction to Econometrics with R}},
     author = {Christoph Hanck and Martin Arnold and Alexander Gerber and Martin Schmelzer},
     howpublished = {Bookdown},
-    note = {(version: 2020-08-12)},
+    note = {version: 2020-08-12},
     url = {https://www.econometrics-with-r.org/index.html},
     year = {2020}
 }
@@ -29,7 +29,7 @@
     title = {{Statistical Significance of Forecasting Methods -- an Empirical Evaluation of the Robustness and Interpretability of the MCB, ANOM and Friedman-Nemenyi Test}},
     author = {Nikolaos Kourentzes},
     howpublished = {Website},
-    note = {(version: 2021-08-12)},
+    note = {version: 2021-08-12},
     url = {https://kourentzes.com/forecasting/2012/04/19/statistical-significance-of-forecasting-methods-an-empirical-evaluation-of-the-robustness-and-interpretability-of-the-mcb-anom-and-friedman-nemenyi-test/},
     year = {2012}
 }
@@ -38,7 +38,7 @@
     title = {{Method}},
     author = {Dictionary},
     howpublished = {Cambridge Dictionary},
-    note = {(version: 2021-09-02)},
+    note = {version: 2021-09-02},
     url = {https://dictionary.cambridge.org/dictionary/english/method},
     year = {2021}
 }
@@ -47,7 +47,7 @@
     title = {{The NLopt Nonlinear Optimization Package}},
     author = {Steven G., Johnson},
     howpublished = {NLopt Documentation},
-    note = {(version: 2021-11-01)},
+    note = {version: 2021-11-01},
     url = {https://nlopt.readthedocs.io/},
     year = {2021}
 }
