--- a/library.bib
+++ b/library.bib
@@ -740,7 +740,7 @@ year = {2018}
 
 @article{Hyndman2008Forecast,
     title = {{Automatic Time Series Forecasting: the forecast Package for R}},
-    author = {Rob J Hyndman and Yeasmin Khandakar},
+    author = {Hyndman, Rob J. and Khandakar, Yeasmin},
     journal = {Journal of Statistical Software},
     volume = {26},
     number = {3},
@@ -853,9 +853,9 @@ year = {2009}
 
 @MISC{SvetunkovSBA,
     title = {Statistics for Business Analytics},
-    author = {Ivan Svetunkov},
+    author = {Svetunkov, Ivan},
     howpublished = {Lecture notes. OpenForecast},
-    note = {(version: 31.10.2022)},
+    note = {version: 31.10.2022},
     url = {https://openforecast.org/sba/},
     year = {2022}
 }
@@ -1074,7 +1074,7 @@ year = {2010}
 }
 
 @article{Tofallis2015,
- author = {Chris Tofallis},
+ author = {Tofallis, Chris},
  journal = {The Journal of the Operational Research Society},
  number = {8},
  pages = {1352 -- 1362},
@@ -1120,7 +1120,7 @@ year = {2022}
 }
 
 @article{Svetunkov2015,
-   author = {Ivan Svetunkov and Nikolaos Kourentzes and John Keith Ord},
+   author = {Svetunkov, Ivan and Kourentzes, Nikolaos and Ord, J. Keith},
    doi = {10.1002/nav.22074},
    journal = {Naval Research Logistics (NRL)},
    month = {8},
@@ -1181,7 +1181,7 @@ volume = {30},
 pages = {217-234},
 year = {2014},
 doi = {10.1016/j.ijforecast.2013.07.018},
-author = {Yun Shin Lee and Stefan Scholtes}
+author = {Lee, Yun Shin and Scholtes, Stefan}
 }
 
 @Inbook{Huber1992,
@@ -1393,7 +1393,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Box1970,
-    author = {George. E. P. Box and David A. Pierce},
+    author = {Box, George. E. P. and Pierce, David A.},
     title = {{Distribution of Residual Autocorrelations in Autoregressive-Integrated Moving Average Time Series Models}},
     journal = {Journal of the American Statistical Association},
     volume = {65},
@@ -1429,7 +1429,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Godfrey1978,
-     author = {L. G. Godfrey},
+     author = {Godfrey, L. G.},
      journal = {Econometrica},
      number = {6},
      pages = {1293 -- 1301},
@@ -1441,7 +1441,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Bartlett1937,
- author = {M. S. Bartlett},
+ author = {Bartlett, M. S.},
  journal = {Proceedings of the Royal Society of London. Series A, Mathematical and Physical Sciences},
  number = {901},
  pages = {268 -- 282},
@@ -1454,7 +1454,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{White1980,
- author = {Halbert White},
+ author = {White, Halbert},
  journal = {Econometrica},
  number = {4},
  pages = {817 -- 838},
@@ -1467,7 +1467,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Breusch1979,
- author = {T. S. Breusch and A. R. Pagan},
+ author = {Breusch, T. S. and Pagan, A. R.},
  journal = {Econometrica},
  number = {5},
  pages = {1287 -- 1294},
@@ -1493,7 +1493,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Anderson1952,
-    author = {T. W. Anderson and D. A. Darling},
+    author = {Anderson, T. W. and Darling, D. A.},
     title = {{Asymptotic Theory of Certain ``Goodness of Fit'' Criteria Based on Stochastic Processes}},
     volume = {23},
     journal = {The Annals of Mathematical Statistics},
@@ -1529,7 +1529,7 @@ doi = {10.1186/s40488-015-0028-6}
 
 @article{svetunkov2023smooth,
       title={{Smooth Forecasting with the Smooth Package in R}},
-      author={Ivan Svetunkov},
+      author={Svetunkov, Ivan},
       year={2023},
       eprint={2301.01790},
       journal={arXiv},
@@ -1547,7 +1547,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Friedman1937,
-    author = {Milton Friedman},
+    author = {Friedman, Milton},
     title = {{The Use of Ranks to Avoid the Assumption of Normality Implicit in the Analysis of Variance}},
     journal = {Journal of the American Statistical Association},
     volume = {32},
@@ -1559,7 +1559,7 @@ doi = {10.1186/s40488-015-0028-6}
 }
 
 @article{Wilcoxon1945,
-     author = {Frank Wilcoxon},
+     author = {Wilcoxon, Frank},
      journal = {Biometrics Bulletin},
      number = {6},
      pages = {80 -- 83},
