--- a/websites.bib
+++ b/websites.bib
@@ -1,6 +1,6 @@
 @MISC{SvetunkovAccuracy2019,
     title = {{Are You Sure You're Precise? Measuring Accuracy of Point Forecasts}},
-    author = {Ivan Svetunkov},
+    author = {Svetunkov, Ivan},
     howpublished = {Open Forecasting},
     note = {version: 2019-08-25},
     url = {https://forecasting.svetunkov.ru/en/2019/08/25/are-you-sure-youre-precise-measuring-accuracy-of-point-forecasts/},
@@ -9,7 +9,7 @@
 
 @MISC{SvetunkovAPEs2017,
     title = {{Naughty APEs and the Quest for the Holy Grail}},
-    author = {Ivan Svetunkov},
+    author = {Svetunkov, Ivan},
     howpublished = {Open Forecasting},
     note = {version: 2017-07-29},
     url = {https://forecasting.svetunkov.ru/en/2017/07/29/naughty-apes-and-the-quest-for-the-holy-grail/},
@@ -27,7 +27,7 @@
 
 @MISC{KourentzesWeb2012,
     title = {{Statistical Significance of Forecasting Methods -- an Empirical Evaluation of the Robustness and Interpretability of the MCB, ANOM and Friedman-Nemenyi Test}},
-    author = {Nikolaos Kourentzes},
+    author = {Kourentzes, Nikolaos},
     howpublished = {Website},
     note = {version: 2021-08-12},
     url = {https://kourentzes.com/forecasting/2012/04/19/statistical-significance-of-forecasting-methods-an-empirical-evaluation-of-the-robustness-and-interpretability-of-the-mcb-anom-and-friedman-nemenyi-test/},
@@ -45,7 +45,7 @@
 
 @MISC{nlopt,
     title = {{The NLopt Nonlinear Optimization Package}},
-    author = {Steven G., Johnson},
+    author = {Johnson, Steven G.},
     howpublished = {NLopt Documentation},
     note = {version: 2021-11-01},
     url = {https://nlopt.readthedocs.io/},
